--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!doctype html>
 <html lang="fi">
+<!-- Afghan clothing sales website -->
+<!-- The site is divided into two parts: index.html and style.css -->
+<!-- The code was written from scratch in Notepad, without an IDE (Integrated Development Environment). -->
+<!-- Note: The video section also includes styling and JS code. -->
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -18,7 +22,7 @@
 </script>
 </head>
 
-
+<!-- Let’s kickstart the body -->
 <body>
   <header>
     <div class="container">
@@ -46,6 +50,8 @@
 	  <p>Note! This page is under development. The website will be completed soon.</p>
 	  <p lang="fa" dir="rtl">توجه! این صفحه در حال توسعه است. نسخه کامل به زودی در دسترس خواهد بود.</p>
 	</div>
+
+<!-- This code is basically a slideshow of dresses auditioning for the role of ‘best outfit in HTML5' -->
  <section class="hero">
   <figure class="slide active">
     <img src="./images/a-20250912-0003.jpg" alt="Mekko" fetchpriority="high" />
@@ -67,7 +73,7 @@
 
 
 
-
+<!-- Video section and notice that this is html+css+JS -->
 
 <section class="video-section">
   <!-- Pieni kontti vain videolle -->
@@ -97,7 +103,7 @@
 
 /* VIDEO: pieni ja keskellä */
 .video-section .media{
-  width: 20%;              /* säädä: 25–40% maun mukaan */
+  width: 20%;  /* tweak between 25–40% — depends on whether you like slim or wide videos */
   margin: 0 auto 1rem;
 }
 .nadiya-video{
@@ -110,7 +116,7 @@
 
 /* TEKSTI: leveämpi kuin video */
 .subs{
-  max-width: 80%;          /* säädä: 80–100% */
+  max-width: 80%;     /* adjust freely (80–100%) — just don’t break the internet */
   margin: 0 auto;
   padding: 1rem 1.2rem;
   background: rgba(255,255,255,0.95);
@@ -214,12 +220,7 @@
 })();
 </script>
 
-
-
-
-
-
-
+<!-- In the About section, we see the portrait of a woman whose beauty, artistic soul, and intelligence shine through every detail. -->
     <section id="tietoja" class="section about">
   <div class="about-text">
     <h2>Tietoja minusta / About me / در باره من</h2>
