--- a/index.html
+++ b/index.html
@@ -4,11 +4,30 @@
 <!-- The site is divided into two parts: index.html and style.css -->
 <!-- The code was written from scratch in Notepad, without an IDE (Integrated Development Environment). -->
 <!-- Note: The video section also includes styling and JS code. -->
+
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Käsintehdyt vaatteet – Etusivu</title>
-  <meta name="description" content="Käsintehtyjä vaatteita – suomeksi, englanniksi ja dariksi(Farssi)." />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Sivun otsikko (näkyy Google-hakutuloksissa ja selaimen välilehdessä) -->
+  <title>Käsintehdyt huivit, hameet, afgaanikorut ja kansallispuvut – Nadiya Boutique</title>
+
+  <!-- Kuvaus (hakutuloksissa näkyvä teksti, houkuttelee klikkaamaan) -->
+  <meta name="description" content="Nadiya Boutique tarjoaa käsintehtyjä huiveja, hameita ja afgaanikoruja. Löydät myös kansallispukuja, nuorten muotia sekä penkkariasuja ylioppilasjuhlaan. Uniikit, yksilölliset vaatteet ja asusteet juuri sinulle.">
+
+  <!-- Avainsanat (Google ei käytä suoraan, mutta muut hakukoneet voivat) -->
+  <meta name="keywords" content="huivi, huivit, hame, hameet, nuoriso, nuorten muoti, penkkarit, penkkariasut, ylioppilasjuhlat, afgaanikorut, afgaani korut, itämaiset korut, kansallispuku, kansallispuvut, käsintehdyt vaatteet, perinnevaatteet, boutique, design-vaatteet, uniikit vaatteet">
+
+  <!-- Open Graph (sosiaalinen media: Facebook, Instagram, WhatsApp) -->
+  <meta property="og:title" content="Käsintehdyt huivit, hameet ja afgaanikorut – Nadiya Boutique">
+  <meta property="og:description" content="Kauniit käsintehdyt huivit, hameet, afgaanikorut ja kansallispukuvalikoima. Tutustu Nadiya Boutiquen uniikkeihin tuotteisiin.">
+  <meta property="og:image" content="https://www.nadiya.fi/images/og-image.jpg">
+  <meta property="og:url" content="https://www.nadiya.fi">
+  <meta property="og:type" content="website">
+
+  <!-- Favicon -->
+  <link rel="icon" href="/favicon.ico">
+  
 <link rel="stylesheet" href="style.css">
 
 <!-- Google tag (gtag.js) -->
@@ -249,6 +268,93 @@ Together we will awaken the beauty and splendor of Afghanistan in your everyday 
       <h2>Tuotteet / Products / محصولات</h2>
       
     </section>
+	
+	<!-- ===================== INTRO / BELOW PRODUCTS ===================== -->
+
+<!-- DARI / FA-AF -->
+<section class="intro" lang="fa-AF" dir="rtl" aria-labelledby="intro-fa-title">
+  <h1 id="intro-fa-title">روسری‌، دامن‌، زیورآلات افغانی و لباس‌های ملی</h1>
+  <h2>الهام برای جوانان، پِنکّاری و جشن‌های فارغ‌التحصیلی</h2>
+  <p>
+    در Nadiya Boutique ما روی <strong>روسری‌های دست‌دوز</strong>، <strong>دامن‌های سنتی و مدرن</strong>،
+    <strong>زیورآلات افغانی</strong> و <strong>لباس‌های ملی</strong> تمرکز داریم—انتخابی عالی برای
+    <strong>جوانان</strong>، مناسبت‌های رسمی و <strong>پِنکّاری</strong> (جشن دانش‌آموزان سال آخر).
+    اگر به دنبال سبک <strong>بوهمی</strong>، <strong>لباس سنتی</strong> یا استایل <strong>مد شهری</strong> هستید،
+    این مجموعه برای شما ساخته شده است.
+  </p>
+  <p>
+    در میان محصولات ما <strong>روسری ابریشمی</strong> برای مراسم، <strong>دامن بلند</strong> برای <strong>لباس ملی</strong>،
+    و <strong>گردنبندهای افغانی</strong> با الهام از فرهنگ شرق را پیدا می‌کنید. این ترکیب‌ها با
+    <strong>لباس ملی فنلاندی</strong> و استایل‌های جشن کاملاً هماهنگ می‌شوند.
+  </p>
+  <ul>
+    <li>روسری (شال) روزمره و مجلسی؛ گزینه‌ای محبوب برای جوانان و مراسم پِنکّاری</li>
+    <li>دامن‌های سنتی/مدرن؛ مناسب برای لباس ملی و جشن‌ها</li>
+    <li>زیورآلات افغانی دست‌ساز؛ گردنبند، گوشواره و ست کامل</li>
+    <li>لباس‌های ملی و قطعات مکمل برای رویدادهای فرهنگی</li>
+  </ul>
+</section>
+
+<!-- SUOMI -->
+<section class="intro" lang="fi" aria-labelledby="intro-fi-title">
+  <h1 id="intro-fi-title">Huivit, hameet, afgaanikorut ja kansallispuvut</h1>
+  <h2>Inspiraatiota nuorisolle, penkkareihin ja juhlapukeutumiseen</h2>
+  <p>
+    Nadiya Boutique kokoaa yhteen <strong>käsintehdyt huivit</strong>, <strong>hameet</strong>,
+    <strong>afgaanikorut</strong> ja <strong>kansallispuvut</strong>. Mallistomme on suunniteltu
+    <strong>nuorison</strong> tarpeisiin—myös <strong>penkkareihin</strong> ja ylioppilasjuhliin—sekä
+    perinteisiin ja moderniin pukeutumiseen. Etsitpä boho-tyyliä, etnistä muotia tai perinneasua,
+    löydät meiltä sopivan vaihtoehdon.
+  </p>
+  <p>
+    Valikoimassa on juhlava <strong>silkkihuivi</strong>, <strong>pitkä hame</strong> osaksi
+    <strong>kansallispukua</strong> sekä näyttävät <strong>afgaanikorut</strong>, jotka täydentävät asun.
+    Yhdistelemällä saat yksilöllisen tyylin arkeen ja juhlaan.
+  </p>
+  <ul>
+    <li>Huivit (arkeen & juhlaan), suosikkeja myös penkkariasuihin</li>
+    <li>Hameet: perinteiset ja modernit mallit kansallispukuun ja juhliin</li>
+    <li>Afgaanikorut: käsintehtyjä kaulakoruja, korvakoruja ja settejä</li>
+    <li>Kansallispuku & perinnepukeutuminen: ajattomia kokonaisuuksia</li>
+  </ul>
+</section>
+
+<!-- ENGLISH -->
+<section class="intro" lang="en" aria-labelledby="intro-en-title">
+  <h1 id="intro-en-title">Scarves, Skirts, Afghan Jewelry & National Costumes</h1>
+  <h2>Style ideas for youth, graduation carnivals and festive wear</h2>
+  <p>
+    At Nadiya Boutique we curate <strong>handcrafted scarves</strong>, <strong>skirts</strong>,
+    <strong>Afghan jewelry</strong> and <strong>national costumes</strong>. Our selection works
+    beautifully for <strong>youth</strong> looks—including Finland’s <strong>Penkkarit</strong> celebrations
+    and graduation parties—as well as for cultural events, boho style and traditional attire.
+  </p>
+  <p>
+    Discover elegant <strong>silk scarves</strong> for ceremonies, a <strong>long skirt</strong> to complete
+    your <strong>national costume</strong>, and statement <strong>Afghan necklaces and sets</strong> inspired by
+    Eastern craftsmanship. Mix and match for a unique outfit—everyday or festive.
+  </p>
+  <ul>
+    <li>Scarves for daily wear and events—popular in Penkkarit outfits</li>
+    <li>Skirts: traditional & modern cuts for national costumes and parties</li>
+    <li>Afghan jewelry: handcrafted necklaces, earrings and matching sets</li>
+    <li>National costume & heritage wear: timeless combinations</li>
+  </ul>
+</section>
+
+<!-- (valinnainen kevyt tyyli) -->
+<style>
+  .intro { max-width: 1100px; margin: 1.5rem auto; padding: 0 1.25rem; }
+  .intro h1 { margin: .2rem 0 .4rem; font-size: clamp(1.35rem, 1.9vw, 1.8rem); }
+  .intro h2 { margin: 0 0 .6rem; font-weight: 600; font-size: clamp(1.05rem, 1.6vw, 1.25rem); opacity: .9; }
+  .intro p { margin: .6rem 0; line-height: 1.6; }
+  .intro ul { margin: .6rem 0 1rem 1.2rem; }
+  .intro[dir="rtl"] ul { margin-left: 0; margin-right: 1.2rem; }
+  .intro strong { font-weight: 600; }
+</style>
+	
+	
+	
 
     <section id="yhteys" class="section">
       <h2>Yhteys / Contact / تماس</h2>
@@ -290,7 +396,6 @@ Together we will awaken the beauty and splendor of Afghanistan in your everyday 
          style="height:14px; vertical-align:middle; margin:0 2px;">
     
       gmail.com
-<!-- mailto:nadiyaboutigue&#64;gmail.com -->
     </a>
   </p>
 </div>
