--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ Together we will awaken the beauty and splendor of Afghanistan in your everyday 
 	<!-- ===================== INTRO BOX / BELOW PRODUCTS ===================== -->
 <div class="intro-box">
   
-  <!-- DARI / FA-AF -->
+  <!-- DARI / FA-AF 
   <section class="intro" lang="fa-AF" dir="rtl" aria-labelledby="intro-fa-title">
     <h1 id="intro-fa-title">روسری‌، دامن‌، زیورآلات افغانی و لباس‌های ملی</h1>
     <h2>الهام برای جوانان، پِنکّاری و جشن‌های فارغ‌التحصیلی</h2>
@@ -300,9 +300,9 @@ Together we will awaken the beauty and splendor of Afghanistan in your everyday 
     <li>زیورآلات افغانی دست‌ساز؛ گردنبند، گوشواره و ست کامل</li>
     <li>لباس‌های ملی و قطعات مکمل برای رویدادهای فرهنگی</li>
   </ul>
-  </section>
+  </section> -->
 
-  <!-- SUOMI -->
+  <!-- SUOMI 
   <section class="intro" lang="fi" aria-labelledby="intro-fi-title">
     <h1 id="intro-fi-title">Huivit, hameet, afgaanikorut ja kansallispuvut</h1>
     <h2>Inspiraatiota nuorisolle, penkkareihin ja juhlapukeutumiseen</h2>
@@ -324,9 +324,9 @@ Together we will awaken the beauty and splendor of Afghanistan in your everyday 
     <li>Afgaanikorut: käsintehtyjä kaulakoruja, korvakoruja ja settejä</li>
     <li>Kansallispuku & perinnepukeutuminen: ajattomia kokonaisuuksia</li>
   </ul>
-  </section>
+  </section> -->
 
-  <!-- ENGLISH -->
+  <!-- ENGLISH -
   <section class="intro" lang="en" aria-labelledby="intro-en-title">
     <h1 id="intro-en-title">Scarves, Skirts, Afghan Jewelry & National Costumes</h1>
     <h2>Style ideas for youth, graduation carnivals and festive wear</h2>
@@ -347,7 +347,7 @@ Together we will awaken the beauty and splendor of Afghanistan in your everyday 
     <li>Afghan jewelry: handcrafted necklaces, earrings and matching sets</li>
     <li>National costume & heritage wear: timeless combinations</li>
   </ul>
-  </section>
+  </section> ->
 
 </div>
 
