--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   <!-- Full-width video -->
   <div class="media">
     <video id="nadiyaVideo" class="nadiya-video" controls playsinline>
-      <source src="./images/nadiya_2.MP4" type="video/mp4" />
+      <source src="./images/nadiya_2.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
   </div>
